fix: Add missing script tag for React app initialization

--- a/index.html
+++ b/index.html
@@ -174,5 +174,6 @@
 </head>
   <body class="bg-custom-dark text-slate-200 h-screen overflow-hidden print:h-auto print:overflow-visible print:bg-white">
     <div id="root" class="h-full print:h-auto print:overflow-visible"></div>
+        <script type="module" src="./index.tsx"></script>
   </body>
 </html>
